Actualizado Test y algunas clases